use-case-testing/uc-6/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a-1
  labels:
    team: tenant-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-b-1
  labels:
    team: tenant-b
