use-case-testing/uc-6/deny-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: tenant-a-1
spec:
  selector: all()
  types:
  - Ingress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: tenant-b-1
spec:
  selector: all()
  types:
  - Ingress
